# cookiecutter-proj-template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: modules.md
{{cookiecutter.project_name}}/tests/: test_foo.py
